--- a/About_this_publication.dita
+++ b/About_this_publication.dita
@@ -4,6 +4,7 @@
     <title>About this publication</title>
     <shortdesc></shortdesc>
     <conbody>
-        <p> IBM StoredIQ Deployment and Configuration Guide provides information about how to plan, deploy, and configure the IBM StoredIQ product.</p>
+        <p> IBM StoredIQ Deployment and Configuration Guide provides information about how to plan,
+            deploy, and configure the IBM StoredIQ product.</p>
     </conbody>
 </concept>
