--- a/deploying_ibm_storediq_on_microsoft_hyper_v.dita
+++ b/deploying_ibm_storediq_on_microsoft_hyper_v.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
-<task id="deploying_ibm_storediq_on_microsoft_hyper_v">
+<task id="deploying_ibm_storediq_on_microsoft_hyper_v"  audience="Sys_Admin">
     <title>Deploying IBM StoredIQ on Microsoft Hyper-V</title>
     <shortdesc>As an alternative to installing on an ESX server, the IBM StoredIQ gateway, data
         server, and application stack can be installed on Microsoft Hyper-V. This option is not
@@ -9,12 +9,12 @@
     <taskbody>
         <prereq id="prereq_ecm_1dt_vjb">For the procedure described here, the following software
             prerequisites must be met: <ul id="ul_xv1_cdt_vjb">
-                <li>Microsoft Hyper-V Manager must be installed on a Windows system. </li>
-                <li>7-zip for Windows or tar for the Linux operating system must be available to
+                <li platform="windows">Microsoft Hyper-V Manager must be installed on a Windows system. </li>
+                <li platform="windows">7-zip for Windows or tar for the Linux operating system must be available to
                     extract contents of the OVA. </li>
                 <li>7-zip for Windows or gunzip for the Linux operating system must be installed to
                     decompress the vmdk.gz file. </li>
-                <li>Microsoft Virtual Machine Converter 3.0 (Windows) or qemu-img (Linux) or must be
+                <li platform="windows" audience="End_User">Microsoft Virtual Machine Converter 3.0 (Windows) or qemu-img (Linux) or must be
                     installed to convert the files from VMWare .vmdk files to Hyper-V .vhdx files.
                 </li>
             </ul></prereq>
