--- a/licence_usage_metrics.dita
+++ b/licence_usage_metrics.dita
@@ -2,6 +2,14 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="licence_usage_metrics">
     <title>Licence usage metrics</title>
+    <prolog>
+        <metadata>
+            <keywords>
+                <indexterm>ILMT <indexterm>IBM Software License Metric
+                    Tag (SLMT)</indexterm></indexterm>
+            </keywords>
+        </metadata>
+    </prolog>
     <conbody>
         <p>Using the IBM License Metric Tool, you can generate license consumption reports that
             count IBM StoredIQ license usage. </p>
