--- a/open_ports_for_desktop_client_access_to_the_data_server.dita
+++ b/open_ports_for_desktop_client_access_to_the_data_server.dita
@@ -3,6 +3,8 @@
 <task id="open_ports_for_desktop_client_access_to_the_data_server">
     <title>Open ports for desktop client access to the data server</title>
     <shortdesc></shortdesc>
+    <prolog><metadata><keywords><indexterm>data servers</indexterm>
+                <indexterm>ports</indexterm></keywords></metadata></prolog>
     <taskbody>
         <context>
             <p>To open ports for desktop client access to the data server on OVA deployed systems,
